# multi-timescale-energy-dispatch

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml  启动GUI.bat
src/energy_dispatch/: __init__.py  cli.py  config.py  gui.py  intraday.py  optimization.py  simulation.py
tests/: test_reference.py  test_smoke.py
