[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-timescale-energy-dispatch"
version = "0.1.0"
description = "A compact Python implementation of multi-timescale energy dispatch with NSGA-II optimization."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Claude Code" }
]
dependencies = [
  "numpy>=1.26",
  "pymoo>=0.6.1",
  "matplotlib>=3.8"
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
energy-dispatch = "energy_dispatch.cli:main"
energy-gui = "energy_dispatch.gui:launch_gui"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
